# volterra_app

./: .env.example  .envrc  .gga  .gitignore  AGENTS.md  README.md  pyproject.toml
.config/opencode/: .gentle-ai-default-agent.json  AGENTS.md  opencode.json
docs/architecture/: architecture.md
docs/product/: business-rules.md  glossary.md  vision.md
scripts/: opencode.sh
src/volterra_stock/domain/: __init__.py  producto.py
tests/domain/: test_producto.py
