[project]
name = "volterra-stock"
version = "0.1.0"
description = "Sistema local de gestión de stock para Volterra"
requires-python = ">=3.14"

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"

[tool.coverage.run]
source = ["volterra_stock"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80